--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ build/
 Gemfile.lock
 .ruby-version
 .ruby-gemset
+.rspec_status
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
